--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -19,4 +19,6 @@ knitr::opts_chunk$set(connection = db, max.print = 20)
 ```
 
 ```{sql connection=db}
-SHOW DATABASES;
+SHOW TABLES;
+```
+percentage of tip for passengers, the average percentage.
