--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -18,8 +18,10 @@ db <- dbConnect(MySQL(),
 knitr::opts_chunk$set(connection = db, max.print = 20)
 
 ```
-Christmas is arguably the most important holiday, families and friends get together to celebrate the holidays. It's the time people apperciated spending time at home with relatives and frinds which often involves traveling home. But flying home can create a lot of stress especially because of the weather and possible delays. In fact, data shows that in 2015 chirstams eve was 6th day in december with the most delays with a total of 200 days of delays.(more comment about the data)
+<center>![christmas](christmas1.png)</center>
 
+Christmas is arguably the most important holiday, families and friends get together to celebrate the holidays. It's the time people apperciated spending time at home with relatives and frinds which often involves traveling home. But flying home can create a lot of stress especially because of the weather and possible delays. In fact, data shows that in 2015 chirstams eve was 6th day in december with the most delays with a total of 200 days of delays.(more comment about the data)
+<center>![delay](delay.png)</center>
 ```{sql connection=db}
 SELECT  sum(af.dep_delay)/(60*24) as total_delay_days, af.day, af.month
 FROM flights af
