--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -39,7 +39,7 @@ In the article from the USA today: “What Is the Busiest Travel Day?” has sta
 In order to find out which airline carriers have the least delay times on Christmas Eve, we grouped by the airline carrier, and then took the average of the delay times using the AVG() function. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes. The top ten airline carriers to prevent from facing flight delay during Christmas Eve are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. 
 
 ```{sql connection=db}
-SELECT ac.carrier, ac.name, af.year, avg(af.dep_delay) as average_delay_min, af.day, af.month
+SELECT ac.carrier, ac.name, avg(af.dep_delay) as average_delay_min, af.year, af.month, af.day
 FROM carriers ac
 JOIN flights af
 on ac.carrier = af.carrier
@@ -55,7 +55,7 @@ Forbes in 2018 published an article on the ranking of airlines in the United Sta
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YvfYK0EEhK4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-While Alaska Airlines is scored in the top among other airlines, the relative prices tend to be more expensive. While it may be stressful to have a bad experience coming home during the holidays, using low rated airlines such as the Spirit Airlines may not be so bad at the end as you are seeing family. Having delays may not be so bad. It might even save you from missing your flight if you arrived late for some reason. So it is really important to plan ahead according to what carrier you’re flying with. It’s true that it’s hard to predict flight delays, but if you’re flying with Alaska Airlines, chances are that the flight will be on time. It is really up to your preferences, but the delays should not take away from the fact that after a long day at the airport you will have the opportunity to spend time with family on these important holidays. Don’t be too stressed about your flight experience, and I hope you make a good decision based on our suggestions of carriers that have the least delays.
+While Alaska Airlines is scored in the top among other airlines, the relative prices tend to be more expensive. While it may be stressful to have a bad experience coming home during the holidays, using low rated airlines such as the Spirit Airlines may not be so bad at the end as you are seeing family. Having delays may not be so bad. It might even save you from missing your flight if you arrived late for some reason. So it is really important to plan ahead according to what carrier you’re flying with. It’s true that it’s hard to predict flight delays, but if you’re flying with Alaska Airlines, chances are that the flight will be on time. It is really up to your preferences, but the delays should not take away from the fact that after a long day at the airport you will have the opportunity to spend time with family on these important holidays.
 
 
 ```{r, message = FALSE, warning = FALSE, echo = TRUE}
