some changes made

--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -36,7 +36,7 @@ LIMIT 0, 20
 
 In the article from the USA today: “What Is the Busiest Travel Day?” has stated that New Year’s and Christmas is the busiest time of the year to travel by airplane. Although this time period is the busiest our data has shown us that the day with the most delays is December 29th with an average of 30.9502 mins of delays. Assuming that airlines tend to get the most delays when a large number of people are traveling we would have expected Christmas and New Years to be the busiest. The real question to ask is who is traveling on these days? Everyone would rather have the chance to already be with their families on these special days and not on an airplane.  According to our data, these holidays are at the bottom of our top 20 data table. Both days average around 8 mins in delays. December 29th is a middle point of the week between these two holidays which makes sense why it can be seen as the busiest of days.  
 
-In order to find out which airline carriers have the least delay times on Christmas Eve, we grouped by the airline carrier, and then took the average of the delay times using the AVG() function. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes. The top ten airline carriers to prevent from facing flight delay during Christmas Eve are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. 
+In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights tables, and grouped by the airline carrie. Then took the average of the delay times using the AVG() function. Also, we indexed WHERE with the join function to specify the time of 2015 December 24th. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes. The top ten airline carriers to prevent from facing flight delay during Christmas Eve are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. 
 
 ```{sql connection=db}
 SELECT ac.carrier, ac.name, avg(af.dep_delay) as average_delay_min, af.year, af.month, af.day
