--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -23,7 +23,7 @@ Christmas is arguably the most important holiday, as family and friends get toge
 
 Problem statement: For this assignment, we are trying to figure out which airline carriers have the least amount of delays during Christmas Eve using the airline's database. 
 
-In order to confirm whether Christmas Eve is actually one of the busiest days with a lot of delays, we used the flight's data frame to compute the average delay minutes in each day in the month of December 2015. We grouped the data frame by the days in December and computed the average delay times for each day using the AVG() function. In fact, data shows that Christmas Eve had 6th most delays in December 2015 with an average of 21.5332 minutes. 
+In order to confirm whether Christmas Eve is actually one of the busiest days with a lot of delays, we used the flight's data frame to compute the average delay minutes in each day in the month of December 2015. We grouped the data frame by the days in December and computed the average delay times for each day using the AVG() function. We then used ORDER BY on the average delay minutes by descending order to see which days of December had the most average delay times, and used LIMIT to see the top 20 days with the most average delays. In fact, data shows that Christmas Eve had 6th most delays in December 2015 with an average of 21.5332 minutes. 
 
 ```{sql connection=db}
 SELECT  af.month, af.day, AVG(af.dep_delay) as ave_delay_minutes
