--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -19,11 +19,11 @@ knitr::opts_chunk$set(connection = db, max.print = 20)
 
 ```
 
-Christmas is arguably the most important holiday, as family and friends get together to celebrate the holidays. It's the time people appreciate spending time at home with relatives and friends which often involves traveling home. USA today listed the Christmas season as one of the busiest travel days. But flying home can create a lot of stress especially because of the weather and possible delays. 
+Christmas is arguably the most important holiday, as family and friends get together to celebrate the holidays. It's the time people appreciate spending at home with relatives and friends which often involves traveling home. USA today listed the Christmas season as one of the busiest travel days. But flying home can be very stressful especially because of the weather and possible delays. 
 
-Problem statement: For this assignment, we are trying to figure out which airline carriers have the least amount of delays during Christmas Eve using the airline's database. 
+Problem statement: For this assignment, we are trying to figure out which airline carriers have the least amount of delays during Christmas Eve using the airlines database. 
 
-In order to confirm whether Christmas Eve is actually one of the busiest days with a lot of delays, we used the flight's data frame to compute the average delay minutes in each day in the month of December 2015. We grouped the data frame by the days in December and computed the average delay times for each day using the AVG() function. We then used ORDER BY on the average delay minutes by descending order to see which days of December had the most average delay times, and used LIMIT to see the top 20 days with the most average delays. In fact, data shows that Christmas Eve had 6th most delays in December 2015 with an average of 21.5332 minutes. 
+In order to confirm whether Christmas Eve is actually one of the busiest days with a lot of delays, we used the flights table from the airlines database to compute the average delay in minutes in each day of the month of December 2015. We grouped by the days in December and computed the average delay time for each day using the AVG() function. We then used ORDER BY on the average delay in minutes by descending order to see which days of December had the longest average of delays, and used LIMIT to display the top 20 days. In fact, data shows that Christmas Eve had the 6th most delays in December 2015 with an average of 21.5332 minutes. It's also interseting to note that New Year's eve is the second on the table. 
 
 
 ```{sql connection=db}
@@ -35,9 +35,9 @@ ORDER BY ave_delay_minutes desc
 LIMIT 0, 20
 ```
 
-In the article from the USA today: “What Is the Busiest Travel Day?” has stated that New Year’s and Christmas is the busiest time of the year to travel by airplane. Although this time period is the busiest our data has shown us that the day with the most delays is December 29th with an average of 30.9502 mins of delays. Assuming that airlines tend to get the most delays when a large number of people are traveling we would have expected Christmas and New Years to be the busiest. The real question to ask is who is traveling on these days? Everyone would rather have the chance to already be with their families on these special days and not on an airplane.  According to our data, these holidays are at the bottom of our top 20 data table. Both days average around 8 mins in delays. December 29th is a middle point of the week between these two holidays which makes sense why it can be seen as the busiest of days.  
+In the article from the USA today “What Is the Busiest Travel Day?”, Jason Cristiano Ramon stated that New Year’s and Christmas are the busiest time of the year to travel by airplane. Although this time period is the busiest our data has shown us that the day with the most delays is December 29th with an average of 30.9502 mins of delays. Assuming that airlines tend to get the most delays when a large number of people are traveling we would have expected Christmas and New Years to be the busiest. The real question to ask is who is traveling on these days? Obviously, everyone would rather spend precious time with their families on these special days than on an airplane.  According to our data, these holidays are at the bottom of our top 20 data table. Both days average around 8 minutes in delays. December 29th is a middle point of the week between these two holidays which makes sense why it can be seen as the busiest of days.  
 
-In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights data frames on carrier, and grouped by the airline carrie. Then we took the average of the delay times using the AVG() function. Also, we used WHERE to specify the year, month, and day, which is an example of writing efficient SQL queries because we used indexed WHERE with join. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes. The top ten airline carriers to prevent from facing flight delay during Christmas Eve are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. 
+In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights tables on carrier column, and grouped by the airline carrier. Then we took the average of the delay times using the AVG() function. Also, we used WHERE to specify the year, month, and day, which is an example of writing efficient SQL queries because we used indexed WHERE with join. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes and hope to use this data to prevent travelers from facing flight delays during Christmas Eve. The top ten airline carriers are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. 
 
 ```{sql connection=db}
 SELECT ac.carrier, ac.name, avg(af.dep_delay) as average_delay_min, af.year, af.month, af.day
@@ -51,12 +51,12 @@ LIMIT 0,10
 ```
 
 
-Forbes in 2018 published an article on the ranking of airlines in the United States. They pointed out how The Points Guy, a brand that specializes in air travel ranked Alaska Airlines as the best airline in the United States. And also from our data, we found out that Alaska Airlines had the least amount of average delays. So why is Alaska Airlines so good? Many reasons. Alaska Airlines does not excel in one area but rather it has the airline scored in the top three across half of our criteria — airfare, on-time arrivals, baggage handling, customer satisfaction, and its best-in-the-industry frequent flyer program. In contrast, Spirit Airlines ranked last out of the 10 carriers in the delay table. In an article by MONEY, Prachi Bhardwaj explains the reason for flight delays are usually within the airline’s control: maintenance problems, aircraft cleaning, fueling. Spirit Airlines also ranked last also for customer satisfaction, cabin comfort and frequent flyer program. Although this is expected considering the low Spirit Airline Airfares, customers still express their frustration with the carrier. Comedian Brent Pella expresses his frustration with Spirit Airlines in a video about his experience flying with Spirit Airlines.
+Forbes in 2018 published an article on the ranking of airlines in the United States. They pointed out how The Points Guy, a brand that specializes in air travel ranked Alaska Airlines as the best airline in the United States. And also from our data, we found out that Alaska Airlines had the least amount of average delays. So why is Alaska Airlines so good? Many reasons. Alaska Airlines does not excel in one area but rather scored in the top three across half of their criterias — airfare, on-time arrivals, baggage handling, customer satisfaction, and the best-in-the-industry frequent flyer program. In contrast, Spirit Airlines ranked last out of the 10 carriers in the delay table. In an article by MONEY, Prachi Bhardwaj explains that the reason for flight delays are usually within the airline’s control: maintenance problems, aircraft cleaning, fueling. Spirit Airlines also ranked last for customer satisfaction, cabin comfort and frequent flyer program. Although this is expected considering the low Spirit Airline airfares, customers still express their dissatisfaction with the carrier. Comedian Brent Pella expresses his frustration with Spirit Airlines in a video about his experience flying with the carrier.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YvfYK0EEhK4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-While Alaska Airlines is scored in the top among other airlines, the relative prices tend to be more expensive. While it may be stressful to have a bad experience coming home during the holidays, using low rated airlines such as the Spirit Airlines may not be so bad at the end as you are seeing family. Having delays may not be so bad. It might even save you from missing your flight if you arrived late for some reason. So it is really important to plan ahead according to what carrier you’re flying with. It’s true that it’s hard to predict flight delays, but if you’re flying with Alaska Airlines, chances are that the flight will be on time. It is really up to your preferences, but the delays should not take away from the fact that after a long day at the airport you will have the opportunity to spend time with family on these important holidays.
+Although Alaska Airlines scored in the top among other airlines, the relative prices tend to be more expensive. While it may be frustrating to have an uncomfortable or delayed flight during the holidays, using low rated airlines such as Spirit Airlines may not be so bad since you still get to see your family in the end. Having delays is not always terrible and might even save you from missing your flight if you arrived late for some reason. So it is really important to plan ahead according to what carrier you are flying with. It’s true that it’s hard to predict flight delays, but if you’re flying with Alaska Airlines, chances are the flight will be on time. It is really up to your preferences, but the delays should not take away from excitement and joy of knowing that after a long day at the airport you will have the opportunity to spend time with your family on these important holidays.
 
 
 ```{r, message = FALSE, warning = FALSE, echo = TRUE}
