--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -10,6 +10,7 @@ output:
 ```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 library(RMySQL)
+library(ggplot2)
 db <- dbConnect(MySQL(), 
                 host = "scidb.smith.edu", 
                 user = "mth292", 
@@ -35,10 +36,7 @@ ORDER BY ave_delay_minutes desc
 LIMIT 0, 20
 ```
 
-In the article from the USA today “What Is the Busiest Travel Day?”, Jason Cristiano Ramon stated that New Year’s and Christmas are the busiest time of the year to travel by airplane. Although this time period is the busiest our data has shown us that the day with the most delays is December 29th with an average of 30.9502 mins of delays. Assuming that airlines tend to get the most delays when a large number of people are traveling we would have expected Christmas and New Years to be the busiest. The real question to ask is who is traveling on these days? Obviously, everyone would rather spend precious time with their families on these special days than on an airplane.  According to our data, these holidays are at the bottom of our top 20 data table. Both days average around 8 minutes in delays. December 29th is a middle point of the week between these two holidays which makes sense why it can be seen as the busiest of days.  
-
-In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights tables on carrier column, and grouped by the airline carrier. Then we took the average of the delay times using the AVG() function. Also, we used WHERE to specify the year, month, and day, which is an example of writing efficient SQL queries because we used indexed WHERE with join. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes and hope to use this data to prevent travelers from facing flight delays during Christmas Eve. The top ten airline carriers are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. 
-
+In the article from the USA today [“What Is the Busiest Travel Day?”](https://traveltips.usatoday.com/busiest-travel-day-108182.html), Jason Cristiano Ramon stated that New Year’s and Christmas are the busiest time of the year to travel by airplane. Although this time period is the busiest our data has shown us that the day with the most delays is December 29th with an average of 30.9502 mins of delays. Assuming that airlines tend to get the most delays when a large number of people are traveling we would have expected Christmas and New Years to be the busiest. The real question to ask is who is traveling on these days? Obviously, everyone would rather spend precious time with their families on these special days than on an airplane.  According to our data, these holidays are at the bottom of our top 20 data table. Both days average around 8 minutes in delays. December 29th is a middle point of the week between these two holidays which makes sense why it can be seen as the busiest of days.  
 ```{sql connection=db}
 SELECT ac.carrier, ac.name, avg(af.dep_delay) as average_delay_min, af.year, af.month, af.day
 FROM carriers ac
@@ -49,9 +47,36 @@ GROUP BY ac.carrier
 ORDER BY average_delay_min
 LIMIT 0,10
 ```
+In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights tables on carrier column, and grouped by the airline carrier. Then we took the average of the delay times using the AVG() function. Also, we used WHERE to specify the year, month, and day, which is an example of writing efficient SQL queries because we used indexed WHERE with join. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes and hope to use this data to prevent travelers from facing flight delays during Christmas Eve. The top ten airline carriers are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. We also made a bar graph to display our finding from the table about delays per carrier code. This the list of code and name of carriers.
+-AS: Alaska Airlines Inc.
+-MQ: Envoy Air
+-HA: Hawaiian Airlines Inc.
+-UA:United Air Lines Inc.
+-AA:American Airlines Inc.
+-OO:SkyWest Airlines Inc.
+-VX:Virgin America
+-WN: Southwest Airlines Co.
+-B6: JetBlue Airways
+-NK: Spirit Air Lines
 
 
-Forbes in 2018 published an article on the ranking of airlines in the United States. They pointed out how The Points Guy, a brand that specializes in air travel ranked Alaska Airlines as the best airline in the United States. And also from our data, we found out that Alaska Airlines had the least amount of average delays. So why is Alaska Airlines so good? Many reasons. Alaska Airlines does not excel in one area but rather scored in the top three across half of their criterias — airfare, on-time arrivals, baggage handling, customer satisfaction, and the best-in-the-industry frequent flyer program. In contrast, Spirit Airlines ranked last out of the 10 carriers in the delay table. In an article by MONEY, Prachi Bhardwaj explains that the reason for flight delays are usually within the airline’s control: maintenance problems, aircraft cleaning, fueling. Spirit Airlines also ranked last for customer satisfaction, cabin comfort and frequent flyer program. Although this is expected considering the low Spirit Airline airfares, customers still express their dissatisfaction with the carrier. Comedian Brent Pella expresses his frustration with Spirit Airlines in a video about his experience flying with the carrier.
+```{r, messaage=FALSE, warning=FALSE}
+delays<-db%>%
+dbGetQuery("SELECT ac.carrier, ac.name, avg(af.dep_delay) as average_delay_min, af.year, af.month, af.day
+FROM carriers ac
+JOIN flights af
+on ac.carrier = af.carrier
+WHERE af.year= 2015 and af.month=12 and af.day =24
+GROUP BY ac.carrier
+ORDER BY average_delay_min
+LIMIT 0,10")
+```
+
+```{r, messaage=FALSE, warning=FALSE}
+delay_graph <- ggplot(delays, aes(x = carrier, y = average_delay_min))+ geom_bar(stat = "identity", width=0.7, fill="steelblue")+labs(y= "average delay in minutes")+labs(title="average delay in minutes per carrier")
+delay_graph
+```
+Forbes in 2018 published an [article](https://www.forbes.com/sites/laurabegleybloom/2018/03/06/ranked-the-best-and-worst-airlines-in-america/#1ff18bf7e953) on the ranking of airlines in the United States. They pointed out how The Points Guy, a brand that specializes in air travel ranked Alaska Airlines as the best airline in the United States. And also from our data, we found out that Alaska Airlines had the least amount of average delays. So why is Alaska Airlines so good? Many reasons. Alaska Airlines does not excel in one area but rather scored in the top three across half of their criterias — airfare, on-time arrivals, baggage handling, customer satisfaction, and the best-in-the-industry frequent flyer program. In contrast, Spirit Airlines ranked last out of the 10 carriers in the delay table. In an [article](http://money.com/money/5455032/top-airlines-minimum-delays-holidays/) by MONEY, Prachi Bhardwaj explains that the reason for flight delays are usually within the airline’s control: maintenance problems, aircraft cleaning, fueling. Spirit Airlines also ranked last for customer satisfaction, cabin comfort and frequent flyer program. Although this is expected considering the low Spirit Airline airfares, customers still express their dissatisfaction with the carrier. Comedian Brent Pella expresses his frustration with Spirit Airlines in a video about his experience flying with the carrier.
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YvfYK0EEhK4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -64,12 +89,12 @@ wordcountaddin:::text_stats()
 ```
 
 
-^[[Link to the GitHub Repository]https://github.com/annabelyim/sds192-mp4.git
+^[Link to the GitHub Repository]https://github.com/annabelyim/sds192-mp4.git
 
 ###References:
 
-[Link to USA today Article]https://traveltips.usatoday.com/busiest-travel-day-108182.html
+[Link to USA today Article](https://traveltips.usatoday.com/busiest-travel-day-108182.html)
 
-[Link to Forbes Article]https://www.forbes.com/sites/laurabegleybloom/2018/03/06/ranked-the-best-and-worst-airlines-in-america/#1ff18bf7e953
+[Link to Forbes Article](https://www.forbes.com/sites/laurabegleybloom/2018/03/06/ranked-the-best-and-worst-airlines-in-america/#1ff18bf7e953)
 
-[Link to Money Article]http://money.com/money/5455032/top-airlines-minimum-delays-holidays/
+[Link to Money Article](http://money.com/money/5455032/top-airlines-minimum-delays-holidays/)
