--- a/mp4.Rmd
+++ b/mp4.Rmd
@@ -47,17 +47,19 @@ GROUP BY ac.carrier
 ORDER BY average_delay_min
 LIMIT 0,10
 ```
-In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights tables on carrier column, and grouped by the airline carrier. Then we took the average of the delay times using the AVG() function. Also, we used WHERE to specify the year, month, and day, which is an example of writing efficient SQL queries because we used indexed WHERE with join. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes and hope to use this data to prevent travelers from facing flight delays during Christmas Eve. The top ten airline carriers are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. We also made a bar graph to display our finding from the table about delays per carrier code. This the list of code and name of carriers.
--AS: Alaska Airlines Inc.
--MQ: Envoy Air
--HA: Hawaiian Airlines Inc.
--UA:United Air Lines Inc.
--AA:American Airlines Inc.
--OO:SkyWest Airlines Inc.
--VX:Virgin America
--WN: Southwest Airlines Co.
--B6: JetBlue Airways
--NK: Spirit Air Lines
+In order to find out which airline carriers have the least delay times on Christmas Eve, we joined the carriers and flights tables on carrier column, and grouped by the airline carrier. Then we took the average of the delay times using the AVG() function. Also, we used WHERE to specify the year, month, and day, which is an example of writing efficient SQL queries because we used indexed WHERE with join. And by using ORDER BY and LIMIT we found the top ten airline carriers that had the least average delay minutes and hope to use this data to prevent travelers from facing flight delays during Christmas Eve. The top ten airline carriers are Alaska Airlines, Envoy Air, Hawaiian Airlines, United Airlines, and others as shown in the data table below. We also made a bar graph to display our finding from the table about delays per carrier code. This the list of code and name of carriers:
+<ul style="list-style-type:circle;">
+  <li>AS: Alaska Airlines Inc.</li>
+  <li>MQ: Envoy Air.</li>
+  <li>HA: Hawaiian Airlines Inc.</li>
+  <li>UA:United Air Lines Inc.</li>
+  <li>AA:American Airlines Inc.</li>
+  <li>OO:SkyWest Airlines Inc.</li>
+  <li>VX:Virgin America</li>
+  <li>WN: Southwest Airlines Co.</li>
+  <li>WB6: JetBlue Airways</li>
+  <li>NK: Spirit Air Lines</li>
+</ul>
 
 
 ```{r, messaage=FALSE, warning=FALSE}
